# r34_manager

./: README.md  bun.lockb  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: connection.rs  crud.rs  mod.rs
src/components/: ConfirmModal.tsx  CreatorForm.tsx  InfoModal.tsx
src/pages/: BlacklistedCreatorsPage.tsx  CreatorsPage.tsx  InterestingLinksPage.tsx
