[package]
name = "r34_manager"
version = "0.3.0"
description = "A Tauri App to manage content links and creators"
authors = ["twyc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "r34_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
dirs = "4.0"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = {version = "0.32.1", features = ["bundled-sqlcipher-vendored-openssl"] }
regex = "1"
log = "0.4"
env_logger = "0.10"
url = "2.2"
